<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PAC Console</string>
    <string name="quagmire">Giggity Goo!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_ok">OK</string>
    <string name="unknown">Unknown</string>
    <string name="prefix_build_date">Build Date:&#160;%s</string>
    <string name="prefix_build_version">Version:&#160;%s</string>
    <string name="prefix_build_channel">Release Type:&#160;%s</string>
    <string name="prefix_build_size">Size:&#160;%s</string>
    <string name="prefix_build_md5">MD5:&#160;%s</string>
    <string name="prefix_app_version">App Version:&#160;%s</string>
    <string name="nav_info">Rom Info</string>
    <string name="update_available">Update available</string>
    <string name="nav_web">Website</string>
    <string name="nav_gplus">Google+</string>
    <string name="nav_facebook">Facebook</string>
    <string name="nav_twitter">Twitter</string>
    <string name="nav_instagram">Instagram</string>
    <string name="nav_github">GitHub</string>
    <string name="nav_gerrit">Gerrit</string>
    <string name="nav_list_demo">List Demo</string>
    <string name="nav_settings_demo">Settings</string>
    <string name="nav_sub_menu_demo">Submenu</string>
    <string name="clock_cat">Clock</string>
    <string name="general_cat">General</string>
    <string name="misc_cat">Miscellaneous</string>
    <string name="battery_bar_cat">Battery bar</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="smart_pulldown_summary">Open Quick Settings when there are %1$s notifications present</string>
    <string name="smart_pulldown_off">Off</string>
    <string name="smart_pulldown_dismissable">No dismissable</string>
    <string name="smart_pulldown_persistent">No persistent</string>
    <string name="smart_pulldown_all">No dismissable or persistent</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_custom_header_title">Time Contextual Header</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="su_indicator">Superuser indicator</string>
    <string name="su_indicator_summary_on">Superuser indicator is visible when a session is active</string>
    <string name="su_indicator_summary_off">Toggle to show superuser indicator when a session is active</string>
    <string name="battery_settings_title">Battery</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_hidden">Hidden</string>
    <string name="battery_bar_top_status_bar">Top of status bar</string>
    <string name="battery_bar_top_nav_bar">Top of navigation bar</string>
    <string name="battery_bar_bottom_nav_bar">Bottom of navigation bar</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_style_title">Battery bar alignment</string>
    <string name="battery_bar_regular">Regular</string>
    <string name="battery_bar_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_reversed">Reversed</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion!</string>
    <string name="battery_bar_use_gradient_color">Use gradient color</string>
    <string name="battery_bar_gradient_color_summary">Use gradient color as a scale for the battery level</string>
    <string name="battery_bar_high_color">High level color"</string>
    <string name="battery_bar_low_color">Low level color"</string>
    <string name="changes_title">Changelog</string>
    <string name="changelog_pac_error">Unable to load changelog</string>
    <string name="changelog_pac_summary">Check to see changes in current build</string>
    <string name="clock_setting_title">Clock</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_hidden">Hidden</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_date_title">Date</string>
    <string name="status_bar_date_none">Hidden (default)</string>
    <string name="status_bar_date_small">Small</string>
    <string name="status_bar_date_normal">Normal</string>
    <string name="status_bar_date_format_title">Date format</string>
    <string name="status_bar_date_style">Date style</string>
    <string name="status_bar_date_style_normal">Normal</string>
    <string name="status_bar_date_style_lowercase">Lowercase</string>
    <string name="status_bar_date_style_uppercase">Uppercase</string>
    <string name="status_bar_date_format_custom">Custom java format</string>
    <string name="status_bar_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="status_bar_date_string_edittext_summary">Enter string</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="seekbar_default">Default</string>
    <string name="lock_screen_title">Lock screen</string>
    <string name="lock_screen_show_current">Charging current</string>
    <string name="lock_screen_show_current_summary">Show charging current rate on lock screen</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_color_style">Color style</string>
    <string name="network_traffic_color_reset">Reset color</string>
    <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
    <string name="recent_panel_title">Recents panel</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all button location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_show_searchbar">Show search bar in recents menu</string>
</resources>