<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The PAC-ROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all"> <!-- Main Menu -->
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/ic_question_mark"
            android:title="@string/nav_info"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_two"
            android:icon="@drawable/ic_question_mark"
            android:title="@string/nav_settings_demo"
            android:checkable="true"/>

        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/nav_settings_demo"> <!-- Sub Menu -->
            <menu>
                <item android:id="@+id/nav_three"
                    android:icon="@drawable/ic_question_mark"
                    android:title="@string/nav_list_demo"
                    android:checkable="true"/><!-- Must include the checkable flag -->
            </menu>
        </item>  <!-- End of Sub Menu -->

    </group> <!-- End of Main Menu -->

    <item android:title="Contact"> <!-- Comms menu -->
        <menu>
            <item
                android:id="@+id/com_web"
                android:icon="@drawable/ic_question_mark"
                android:title="@string/nav_web" />
            <item
                android:id="@+id/com_gplus"
                android:icon="@drawable/ic_question_mark"
                android:title="@string/nav_gplus" />
            <item
                android:id="@+id/com_facebook"
                android:icon="@drawable/ic_question_mark"
                android:title="@string/nav_facebook" />
        </menu>
    </item> <!-- End of Comms Menu -->

</menu>
